--- a/mysite/templates/common/login.html
+++ b/mysite/templates/common/login.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                {% include "common/form_errors.html" %}
+                {% include "include/form_errors.html" %}
             </div>
         </div>
         <div class="row">
